# OAI-5G

./: ATTACKS_notes.txt  CMakeLists.txt  EKBuildOAIUE.sh  README.md  runOAIUE.sh  ue_ping.sh
openair2/E2AP/flexric/examples/emulator/agent/: CMakeLists.txt  sm_gtp.c  sm_gtp.h  sm_kpm.c  sm_kpm.h  sm_mac.c  sm_mac.h  sm_pdcp.c  sm_pdcp.h  sm_rc.c  sm_rc.h  sm_rlc.c  sm_rlc.h  sm_slice.c  sm_slice.h  sm_tc.c  sm_tc.h  test_agent.c
openair2/E2AP/flexric/examples/xApp/c/monitor/: CMakeLists.txt  xapp_gtp_moni.c  xapp_kpm_moni.c  xapp_mac_rlc_pdcp_moni.c
openair2/E2AP/flexric/examples/xApp/c/slice/: CMakeLists.txt  xapp_slice_moni_ctrl.c
openair2/E2AP/flexric/examples/xApp/c/tc/: CMakeLists.txt  xapp_tc_all.c  xapp_tc_codel.c  xapp_tc_ecn.c  xapp_tc_osi_codel.c  xapp_tc_partition.c
openair2/E2AP/flexric/src/lib/sm/: CMakeLists.txt
openair2/E2AP/flexric/src/lib/sm/3gpp_derived_ie/: CMakeLists.txt  global_gnb_id.c  global_gnb_id.h  s_nssai.h
openair2/E2AP/flexric/src/lib/sm/3gpp_derived_ie_dec_asn/: CMakeLists.txt  dec_en_gnb.c  dec_en_gnb.h  dec_enb.c  dec_enb.h  dec_global_enb_id.c  dec_global_enb_id.h  dec_global_gnb_id.c  dec_global_gnb_id.h  dec_global_ng_enb.c  dec_global_ng_enb.h  dec_global_ng_ran.h  dec_gnb.c  dec_gnb.h  dec_gnb_cu_up.h  dec_gnb_du.h  dec_ng_enb.c  dec_ng_enb.h  dec_ng_enb_du.h
openair2/E2AP/flexric/src/lib/sm/3gpp_derived_ie_enc_asn/: CMakeLists.txt  enc_en_gnb.c  enc_en_gnb.h  enc_enb.c  enc_enb.h  enc_global_enb_id.c  enc_global_enb_id.h  enc_global_gnb_id.c  enc_global_gnb_id.h  enc_global_ng_enb.c  enc_global_ng_enb.h  enc_global_ng_ran.h  enc_gnb.c  enc_gnb.h  enc_gnb_cu_up.h  enc_gnb_du.h  enc_ng_enb.c  enc_ng_enb.h  enc_ng_enb_du.h
openair2/E2AP/flexric/src/lib/sm/dec_asn_sm_common/: CMakeLists.txt  dec_cell_global_id.c  dec_cell_global_id.h  dec_ran_func_name.h  dec_ue_id.c  dec_ue_id.h
openair2/E2AP/flexric/src/lib/sm/enc_asn_sm_common/: CMakeLists.txt  enc_cell_global_id.c  enc_cell_global_id.h  enc_ran_function_name.h  enc_ue_id.c  enc_ue_id.h
openair2/E2AP/flexric/src/lib/sm/sm_common_ie/: CMakeLists.txt  cell_global_id.h  ran_function_name.h  ue_id.h
openair2/E2AP/flexric/src/sm/gtp_sm/: CMakeLists.txt  gtp_sm_agent.c  gtp_sm_agent.h  gtp_sm_id.h  gtp_sm_ric.c  gtp_sm_ric.h
openair2/E2AP/flexric/src/sm/kpm_sm_v03.00/: CMakeLists.txt  kpm_sm_agent.c  kpm_sm_agent.h  kpm_sm_id.h  kpm_sm_ric.c  kpm_sm_ric.h
openair2/E2AP/flexric/src/sm/kpm_sm_v03.00/dec/: CMakeLists.txt  kpm_dec_asn.c  kpm_dec_asn.h  kpm_dec_generic.h
openair2/E2AP/flexric/src/sm/kpm_sm_v03.00/dec/dec_asn/: CMakeLists.txt  dec_ric_action_def_frm_1.c  dec_ric_action_def_frm_1.h  dec_ric_action_def_frm_2.c  dec_ric_action_def_frm_2.h  dec_ric_action_def_frm_3.c  dec_ric_action_def_frm_3.h  dec_ric_action_def_frm_4.c  dec_ric_action_def_frm_4.h  dec_ric_action_def_frm_5.c  dec_ric_action_def_frm_5.h  dec_ric_event_trigger_frm_1.h  dec_ric_ind_hdr_frm_1.c  dec_ric_ind_hdr_frm_1.h  dec_ric_ind_msg_frm_1.c  dec_ric_ind_msg_frm_1.h  dec_ric_ind_msg_frm_2.c  dec_ric_ind_msg_frm_2.h  dec_ric_ind_msg_frm_3.c  dec_ric_ind_msg_frm_3.h
openair2/E2AP/flexric/src/sm/kpm_sm_v03.00/dec/dec_asn_kpm_common/: CMakeLists.txt  dec_bin_range_def.c  dec_bin_range_def.h  dec_label_info.c  dec_label_info.h  dec_matching_cond_frm_3.h  dec_matching_cond_frm_4.h  dec_meas_bin_range_info.c  dec_meas_bin_range_info.h  dec_meas_data.c  dec_meas_data.h  dec_meas_info_cond_ue.c  dec_meas_info_cond_ue.h  dec_meas_info_frm_1.c  dec_meas_info_frm_1.h  dec_meas_info_frm_3.c  (+3 more)
openair2/E2AP/flexric/src/sm/kpm_sm_v03.00/enc/: CMakeLists.txt  kpm_enc_asn.c  kpm_enc_asn.h  kpm_enc_generic.h  kpm_enc_plain.h
openair2/E2AP/flexric/src/sm/kpm_sm_v03.00/ie/: CMakeLists.txt  README.md  e2sm_kpm_v03.00_modified.asn1  e2sm_kpm_v03.00_standard.asn1  kpm_data_ie.c  kpm_data_ie.h
openair2/E2AP/flexric/src/sm/pdcp_sm/: CMakeLists.txt  pdcp_sm_agent.c  pdcp_sm_agent.h  pdcp_sm_id.h  pdcp_sm_ric.c  pdcp_sm_ric.h
openair2/E2AP/flexric/src/sm/rc_sm/: CMakeLists.txt  rc_sm_agent.c  rc_sm_agent.h  rc_sm_ric.c  rc_sm_ric.h
openair2/E2AP/flexric/src/sm/rc_sm/dec/: rc_dec_asn.c  rc_dec_asn.h  rc_dec_fb.c  rc_dec_fb.h  rc_dec_plain.c  rc_dec_plain.h
openair2/E2AP/flexric/src/sm/rc_sm/enc/: rc_enc_asn.c  rc_enc_asn.h  rc_enc_fb.c  rc_enc_fb.h  rc_enc_plain.c  rc_enc_plain.h
openair2/E2AP/flexric/src/sm/rc_sm/ie/: README.md  e2sm_rc_v1_03_modified.asn  e2sm_rc_v1_03_standard.asn  rc_data_ie.c  rc_data_ie.h
openair2/E2AP/flexric/src/sm/rc_sm/test/: CMakeLists.txt  fill_rnd_data_rc.c  fill_rnd_data_rc.h  main.c
openair2/E2AP/flexric/src/sm/rlc_sm/: CMakeLists.txt  rlc_sm_agent.c  rlc_sm_agent.h  rlc_sm_id.h  rlc_sm_ric.c  rlc_sm_ric.h
openair2/E2AP/flexric/src/sm/slice_sm/: CMakeLists.txt  slice_sm_agent.c  slice_sm_agent.h  slice_sm_id.h  slice_sm_ric.c  slice_sm_ric.h
openair2/E2AP/flexric/src/sm/tc_sm/: CMakeLists.txt  tc_sm_agent.c  tc_sm_agent.h  tc_sm_id.h  tc_sm_ric.c  tc_sm_ric.h
openair2/E2AP/flexric/src/xApp/: CMakeLists.txt  e42_xapp.c  e42_xapp.h  e42_xapp_api.c  e42_xapp_api.h  endpoint_xapp.c  msg_dispatcher_xapp.c  msg_dispatcher_xapp.h  msg_generator_xapp.c  msg_generator_xapp.h  msg_handler_xapp.c  plugin_agent.c  plugin_agent.h
openair2/E2AP/flexric/src/xApp/db/: CMakeLists.txt  db.c  db.h
openair2/E2AP/flexric/src/xApp/db/sqlite3/: sqlite3_wrapper.c
openair2/E2AP/flexric/src/xApp/swig/: CMakeLists.txt  swig_wrapper.cpp
openair2/E2AP/flexric/test/agent-ric/: CMakeLists.txt  test_near_ric.c
openair2/E2AP/flexric/test/encode_decode/sm/kpm/: CMakeLists.txt  main.c
openair2/E2AP/flexric/test/sm/gtp_sm/: CMakeLists.txt  main.c
openair2/E2AP/flexric/test/sm/kpm_sm/: CMakeLists.txt  main.c
openair2/E2AP/flexric/test/sm/mac_sm/: CMakeLists.txt  main.c
openair2/E2AP/flexric/test/sm/pdcp_sm/: CMakeLists.txt  main.c
openair2/E2AP/flexric/test/sm/rc_sm/: CMakeLists.txt  main.c
openair2/E2AP/flexric/test/sm/rlc_sm/: CMakeLists.txt  main.c
openair2/E2AP/flexric/test/sm/slice_sm/: CMakeLists.txt  main.c
openair2/E2AP/flexric/test/sm/tc_sm/: CMakeLists.txt  main.c
(+920 files in other folders)
